first draft at storybord row 1

--- a/01-storyboard/02-row1.md
+++ b/01-storyboard/02-row1.md
@@ -1,15 +1,31 @@
 # Topic
 
+Successful Deployment: Demonstrated Success of OSE's D3D
 
+[GitHub - AlexandriaLittle/d3d-pro: The D3D Pro 3D Printer, built from Open Source Ecology designs, modeled in Legacy DOF (Distributed Open Source Hardware Framework)](https://github.com/alexandrialittle/d3d-pro/)
 
 # Frame
 
-
+Developer's story of finding DOF Alpha
 
 # Benefits
 
+1. Automatic consistency in the resulting documentation
 
+2. Saving development and maintenance time
+
+3. While improving the overall results
 
 # Evidence
 
+1. Show two places where the same content is rendered and the modeled source for that content.  This demonstrates how no matter how many times the content is rendered, it is always the same since there is exactly one version of it in the git repo.
+   
+   1. Render 1: TBD
+   
+   2. Render 2: TBD
+   
+   3. Source: TBD 
 
+2. TBD
+
+3. Resulting documentation is clean, well organized, and complete.
