Refine evidence for row 1

--- a/01-storyboard/02-row1.md
+++ b/01-storyboard/02-row1.md
@@ -1,6 +1,6 @@
 # Topic
 
-Successful Deployment: Demonstrated Success of OSE's D3D
+Successful Deployment of DAMAC: Demonstrated Success of use of DOF Alpha on OSE's D3D
 
 [GitHub - AlexandriaLittle/d3d-pro: The D3D Pro 3D Printer, built from Open Source Ecology designs, modeled in Legacy DOF (Distributed Open Source Hardware Framework)](https://github.com/alexandrialittle/d3d-pro/)
 
@@ -28,4 +28,4 @@ Developer's story of finding DOF Alpha
 
 2. TBD
 
-3. Resulting documentation is clean, well organized, and complete.
+3. Resulting [assembly documentation](https://alexandrialittle.github.io/d3d-pro/) is easy to understand and follow. This ease of understanding comes from the documentation's consistent structure for every step in the assembly process, provided by the DOF Alpha model structure and supporting DAMAC workflow. Each step starts with the required tools and materials, then continues with the complete list of precautions associated with the step's required tools and materials, and concludes with the step-by-step procedure to perform the current assembly operation.
