--- a/01-storyboard/03-row2.md
+++ b/01-storyboard/03-row2.md
@@ -1,9 +1,36 @@
 # Topic
 
+Innovative Workflow: Docs-as-Models-as-Code Approach
+
 # Frame
 
- 
+## Idea 1
+
+How does this work?  To answer that, we have to start by asking, "what is a document?"  Whether we are talking about your first childhood storybook, **The C Programming Language** by Ritchie and Kernighan, or this presentation, a document is a set of content organized and formatted to communicate that content.  The traditional process of creating documents intertwines these two features until it becomes impossible to tell what is content and what is formatting.  
+
+## Idea 2 <-- selected
+
+How did we arrive at the solution demonstrated in the D3D Pro 3D Printer project?  The short story is we stopped trying to figure out how to build a Github for Open Source Hardware (OSHW) and instead asked ourselves, "How can we make OSHW work in Git?" (For the long story, check out our SCALE 20x talk, [Fire, Smoke, and Open Source Hardware](https://www.socallinuxexpo.org/scale/20x/presentations/fire-smoke-and-open-source-hardware/))
+
+## Bridge to Benefits/Topic
+
+What we found is that we needed an approach to documenting open source projects that 
+
+...
+
+The approach we developed to meet those needs is what we call Docs-as-Models-as-Code.
 
 # Benefits
 
+1. managed the content in plain text files, with a Git-friendly structure
+2. created a clear separation of concerns between content and formatting
+3. ensures simple content development and maintenance
+
 # Evidence
+
+1. yaml-datastore: 
+   We are meeting the first need with the development of [YAML Datastore](https://github.com/Mach30/yaml-datastore), a lightweight Typescript library that stores and manages data with structured plaintext files and YAML syntax, designed for use with version control systems. This enables users to gain the advantages of Git for their data—track changes at the feature level, store data across multiple systems, and merge data seamlessly, without having manually manage the on disk representation of their data.  When the data in question is a model of an OSHW project, the resulting project directory becomes the "Models-as-Code" part of the DAMAC approach. 
+2. Models and Views: 
+   Inspired by software development patterns such as Model-View-Controller and Model Based Systems Engineering techniques, the DAMAC approach separates the development of documentation into modeled content and formatted views.  The modeled content covers any piece of information that is a part of the documentation.  This includes technical details such as a part number or the mass of a component and commentary such as a technical note or a reference to another portion of a document.  Conversely, formatted views define the page layout including what content to present, the order of presentation, and content styling.  Formatted views can be used to define machine readable documents (queries) and human readable documents (user artifacts).  Further, formatted views can be defined to render content directly from a model or from another machine readable view (query).  In this way, models can be rendered as documents, creating the "Docs-as-Models" part of DAMAC.
+3. DRY LinkML Schemas: 
+   Which begs the question, "How do we connect the "Docs-as-Models" and "Models-as-Code" parts of the DAMAC approach?" The answer is with DRY [LinkML](https://linkml.io/) schemas.  LinkML is a YAML-based language for describing the structure of models as schema.  Utilizing LinkML schemas to define how projects are modeled creates a structured approach for managing the a project's content.  This structure ensures the formatted views described above have a reliable means of accessing the content within the model.  It also provides clear guidance to developers on where to place content within the model.  Additionally, we place special focus on developing project model schemas that ensure modeled content is stored according to the software engineering principle of Don't Repeat Yourself (DRY).  Focusing on the DRY principle further clarifies where developers should be adding new content, and more importantly it clarifies where to find content that requires revision when design changes and other maintenance activities need to be performed.
