Incorporate Alexa's input into Row 1

--- a/01-storyboard/02-row1.md
+++ b/01-storyboard/02-row1.md
@@ -6,26 +6,42 @@ Successful Deployment of DAMAC: Demonstrated Success of use of DOF Alpha on OSE'
 
 # Frame
 
-Developer's story of finding DOF Alpha
+Early on in the development of the Open Source Ecology D3D Pro 3D Printer, the lead developer, Alexandria Little, chose to use an incredibly pre-release set of tooling to create and manage its documentation.  She made this choice in spite of its pre-release nature because she the time it took to get over its learning curve was minuscule compared to the time it saved her in developing the D3D Pro. Plus, it enabled her to increase the quality of her work and to get more done with less worry.  What was this tool?  Mach 30's **DOF Alpha**, their MVP implementation of Docs-as-Models-as-Code for Open Source Hardware.  Ms. Little's selection of **DOF Alpha** for the D3D Pro makes the D3D Pro the first demonstrated success of Mach 30's Docs-as-Models-as-Code approach to documenting Open Source projects.  
 
 # Benefits
 
-1. Automatic consistency in the resulting documentation
+1. save time
 
-2. Saving development and maintenance time
+2. improved quality
 
-3. While improving the overall results
+3. less worry
 
 # Evidence
 
-1. Show two places where the same content is rendered and the modeled source for that content.  This demonstrates how no matter how many times the content is rendered, it is always the same since there is exactly one version of it in the git repo.
+1. Saving development and maintenance time:
    
-   1. Render 1: TBD
+   1. More complete documentation: without DOF tooling "would not have documented the project anywhere near as thoroughly"
    
-   2. Render 2: TBD
+   2. Worked fearlessly: experimented with details in the design and specification because didn't have to worry about making a mistake in the documentation that would generate hours of mindless work changing every instance of something because "it would be fixed everywhere in the docs after the next time they were generated"
    
-   3. Source: TBD 
+   3. Updating part names: changing details in the documentation, for example a part name from "M6 Hex Nut" to "M6 Nut" was nearly instantaneous regardless of how many times the detail appeared in the documentation (make the change in one place and regenerate, done), plus the DOF tooling would never miss an occurrence of the detail saving later editing time compared to manually tracking down every occurrence
 
-2. TBD
+2. Improved Quality: Resulting [assembly documentation](https://alexandrialittle.github.io/d3d-pro/) is easy to understand and follow. This ease of understanding comes from the documentation's consistent structure for every step in the assembly process, provided by the DOF Alpha model structure and supporting DAMAC workflow. Each step starts with the required tools and materials, then continues with the complete list of precautions associated with the step's required tools and materials, and concludes with the step-by-step procedure to perform the current assembly operation.
 
-3. Resulting [assembly documentation](https://alexandrialittle.github.io/d3d-pro/) is easy to understand and follow. This ease of understanding comes from the documentation's consistent structure for every step in the assembly process, provided by the DOF Alpha model structure and supporting DAMAC workflow. Each step starts with the required tools and materials, then continues with the complete list of precautions associated with the step's required tools and materials, and concludes with the step-by-step procedure to perform the current assembly operation.
+3. less worry: For example, automatic consistency in the resulting documentation that means no matter how many times the content is rendered, it is always the same since there is exactly one version of it in the git repo.  Here is a specific example:
+   
+   1. The part name "M3 x 10mm Cap Screw" 6 times in the assembly documentation
+   
+   2. The part name occurs exactly once in the source Model-As-Code, in the description field
+      
+      ```
+      {
+        "name": "m3-10mm-cap-screw",
+        "version": "1.0.0",
+        "description": "M3 x 10mm Cap Screw",
+        "license": "CC-BY-SA-4.0",
+        "author": "Alexandria Little",
+        "dependencies": {
+        }
+      }
+      ```
