Remove references to DOF Alpha from Row 1

--- a/01-storyboard/02-row1.md
+++ b/01-storyboard/02-row1.md
@@ -6,7 +6,7 @@ Successful Deployment of DAMAC: Demonstrated Success of use of DOF Alpha on OSE'
 
 # Frame
 
-Early on in the development of the Open Source Ecology D3D Pro 3D Printer, the lead developer, Alexandria Little, chose to use an incredibly pre-release set of tooling to create and manage its documentation.  She made this choice in spite of its pre-release nature because she the time it took to get over its learning curve was minuscule compared to the time it saved her in developing the D3D Pro. Plus, it enabled her to increase the quality of her work and to get more done with less worry.  What was this tool?  Mach 30's **DOF Alpha**, their MVP implementation of Docs-as-Models-as-Code for Open Source Hardware.  Ms. Little's selection of **DOF Alpha** for the D3D Pro makes the D3D Pro the first demonstrated success of Mach 30's Docs-as-Models-as-Code approach to documenting Open Source projects.  
+Early on in the development of the Open Source Ecology D3D Pro 3D Printer, the lead developer, Alexandria Little, chose to use an incredibly pre-release set of tooling to create and manage its documentation.  She made this choice in spite of its pre-release nature because she the time it took to get over its learning curve was minuscule compared to the time it saved her in developing the D3D Pro. Plus, it enabled her to increase the quality of her work and to get more done with less worry.  What was this tool?  Mach 30's Minimum Viable Product implementation of Docs-as-Models-as-Code for Open Source Hardware.  Ms. Little's selection of this tool for the D3D Pro makes the D3D Pro the first demonstrated success of Mach 30's Docs-as-Models-as-Code approach to documenting Open Source projects.  
 
 # Benefits
 
